--- a/index.html
+++ b/index.html
@@ -5,10 +5,20 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <div class="cart-items-container">
+    <div class="cart-items-container" id="photo1">
       <div class="cart-item">
         <span class="fas fa-times"></span>
         <img src="./img/496599.jpg" class="pat" />
+        <div class="content">
+          <h1>Hungry!</h1>
+        </div>
+      </div>
+    </div>
+
+    <div class="cart-items-container" id="photo2">
+      <div class="cart-item">
+        <span class="fas fa-times"></span>
+        <img src="./img/123.PNG" class="pat" />
         <div class="content">
           <h1>Hungry!</h1>
         </div>
